mule-user-guide/v/3.4/using-perceptive-flow-design.adoc
= Using Perceptive Flow Design

Building upon the certainty that connection testing establishes, Mule takes one more step to make designing your application easier with *Perceptive Flow Design*. If you model a flow to include an Anypoint Connector, preceded or followed by a Anypoint DataMapper Transformer, Mule uses the working connection to the resource to retrieve metadata about message payload and properties. Capturing the data type and structure that a resource employs, Mule feeds that data into the http://www.mulesoft.org/documentation/display/current/DataMapper+Transformer+Reference[DataMapper Transformer,] thereby informing the DataMapper of the expected input or output.  This functionality facilitates mapping of data from one data format and structure to another. 

== Assumptions

This document assumes that you are familiar with the http://www.mulesoft.org/documentation/display/current/Mule+Studio+Essentials[Visual Editor in Mule Studio] and the link:/mule-user-guide/v/3.4/anypoint-connectors[Anypoint Connectors] and http://www.mulesoft.org/documentation/display/current/Datamapper+User+Guide+and+Reference[DataMapper Transformer] that you can use to create applications in Studio.  Further, this document references http://www.mulesoft.org/documentation/display/current/Connecting+Using+Transports[Connectors] and http://www.mulesoft.org/documentation/display/33X/Understand+Global+Mule+Elements[Global Elements.] Review http://www.mulesoft.org/documentation/display/current/Mule+DataSense[Mule DataSense] to learn more about the overall DataSense functionality; review the http://www.mulesoft.org/documentation/display/current/Getting+Started+with+Mule+Studio[Getting Started with Mule Studio] chapter to learn more about developing with Mule ESB's graphical user interface.

== Desigining with Metadata

It is very common to use Mule to connect with a SaaS provider in an application. However, because each SaaS provider supports different data types and structures,  it is challenging to map data to or from them. Connecting with Salesforce, for example, involves more than just a simple plug and play connection– you must examine the data structure of Salesforce to determine the expected data input or output.  If Salesforce employed the same data structure as the raw messages in your application, you could simply map "username" to "username", but there are likely complexities that make direct mapping impossible. For example, you may need to disassemble the "username" input to map it to "company_name" output. 

In order to make mapping data easier, Mule DataSense's perceptive functionality performs the following activities:

* tests connections to the SaaS providers to which you wish to connect
* retrieves metadata from the SaaS providers to acquire information about the data structure and format each employs
* supplies the sObject type for the data input or output for use by DataMapper 

In other words, Mule intelligently examines the structure of the input or output data you intend to map, then feeds the correct input or output values into your DataMapper. Using Perceptive Flow Design, you don't need to figure out the data structures manually. Mule's automated connection testing and metadata retrieval gives you a higher level of certainty that your flow will run without errors.

==== Limitations

* Perceptive Flow Design is only available in http://www.mulesoft.org/documentation/display/current/Mule+Studio+Essentials[Studio's Visual Editor].
* To use Perceptive Flow Design, you must configure at least one Anypoint connector, test its connections, then insert a DataMapper into your flow before or after the connector.  +
* Perceptive Flow Design only functions with Anypoint connectors which support link:/mule-user-guide/v/3.4/testing-connections[connection testing] (see table below).
+
[cols="2*"]
|===
|*Connector* |*Bundled with Studio*
|Facebook |image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Google Calendars
|image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Google Spreadsheets
|image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Google Tasks
|image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Marketo | 

|Netsuite | 

|Salesforce |image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Twitter
|image:/docs/s/en_GB/3391/c989735defd8798a9d5e69c058c254be2e5a762b.76/_/images/icons/emoticons/check.png[(tick)]

|Zuora |
|===

== Building a Perceptive Flow

. Begin by building a flow which contains at least one connector which supports connection testing. For example, create a flow with a http://www.mulesoft.org/extensions/salesforce-cloud-connector[Salesforce Connector].
+
image:basic_flow.png[basic_flow]

. Configure the Salesforce connector, and its corresponding global connector, then test the connection to confirm communication. Refer to link:/mule-user-guide/v/3.4/testing-connections[Testing Connections] for details.
. Once you have confirmed successful connection to Salesforce, insert a *DataMapper* before the connector on your canvas.
+
image:basic_flow2.png[basic_flow2]

. Double-click the DataMapper building block to open the *New DataMapper* flow wizard. Enter the descriptive details on the first page, then click *Next*.
. Having already retrieved details about data structure and format from Salesforce (because you have successfully connected via your global connector), Mule automatically prescribes the *Output* (see image below).
+
image:defined_output.png[defined_output]

. Manually define the input values for DataMapper, then click *Finish*.
. Studio opens the DataMapper console and displays the input fields you manually defined at left, and the output fields that DataSense retrieved from Salesforce at right. 
. Drag and drop input fields across to output fields to map and transform data format to Salesforce-friendly values. See example below.
+
image:dataMapping_example.png[dataMapping_example]

. Save, then continue to build your Mule application.

== See Also

* Learn more about Anypoint DataMapper through the link:/mule-user-guide/v/3.4/datamapper-user-guide-and-reference[Datamapper User Guide and Reference]. Specifically on the subject of metadata, see link:/mule-user-guide/v/3.4/defining-datamapper-input-and-output-metadata[Defining DataMapper Input and Output Metadata].
* link:/docs/display/34X/Deploying+Studio+Applications[Deploy] your application to Mule CloudHub.
* See DataSense in action!  Examine two example applications which were built using DataSense: http://www.mulesoft.org/documentation/display/current/Connect+with+Salesforce+Example[Connect with Salesforce Example ]and http://www.mulesoft.org/documentation/display/current/DataMapper+with+FlowRefLookup+Example[DataMapper with FlowRefLookup Example.]
